--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,6 +13,11 @@
   }
 }
 
+.input, button {
+  display: block;
+  margin: 8px 0;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
