--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -51,19 +51,30 @@ code {
   border-radius: 10px;
 }
 
+.loginform {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  color: white;
+}
 
 .login-wrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: white;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 .logincontainer {
   display: flex;
   flex-direction: column;
-  justify-content: left;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.logincontainer input {
+  width: 100%;
 }
 
 .button-container {
@@ -138,12 +149,12 @@ button:hover .arrow:before {
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
+  color: white;
 }
 
 .signup-wrapper {
   display: flex;
   flex-direction: column;
-  color: white;
 }
 
 .signupcontainer {
