--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,27 +19,32 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
 .homepage {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 0 25vw;
+  padding: 0; /* Adjusted padding to ensure full coverage */
+  background: linear-gradient(116.52deg, #269272 12.58%, #174A4E 97.55%);
+  min-height: 100vh;
+  max-height: 100vh; /* Ensures it doesn't exceed the viewport height */
+  width: 100vw; /* Ensures full width */
 }
 
 .homepage-content {
   position: relative;
-  top: 25vh;
   display: flex;
-  margin: 0 5vw;
+  margin: 0 5vw; 
   padding: 2vw;
   flex-direction: column;
-  align-items: flex-start;
-  text-align: left;
+  align-items: flex-start; 
+  text-align: left; /* Adjust if you want text centered within .homepage-content */
   color: #269272;
-  min-width: 70%;
+  width: 80%; 
+  justify-content: center; /* Centers the flex items vertically within the .homepage-content */
+  background-color: #f2f2f2;
 }
+
 
 .homepage-content p {
   font-size: 1.5rem;
@@ -49,16 +54,18 @@ code {
 }
 
 .homepage-form {
+  
   position: relative;
-  top: 25vh;
-  display: block;
-  margin: 0 5vw;
+  display: flex; /* Change to flex to use justify-content and align-items */
+  flex-direction: column; /* Stack children vertically */
+  align-items: center; /* Center horizontally in case of wider form elements */
+  justify-content: center; /* Center vertically */
+  margin: auto; /* Center the form within the container */
   padding: 2vw;
-  min-width: 50%;
+  width: 50%; /* Adjusted from min-width to width for consistent sizing */
   background: linear-gradient(116.52deg, #269272 12.58%, #174A4E 97.55%);
   border-radius: 10px;
 }
-
 .loginform {
   display: flex;
   flex-direction: column;
